card uneven fix

--- a/client/src/components/explore/explore.css
+++ b/client/src/components/explore/explore.css
@@ -58,6 +58,8 @@ button[aria-expanded="true"] {
 .paper_card {
   width: 300px;
   height: 360px;
+  display: flex;
+  flex-direction: column;
   border: 2px solid #0097fd;
   border-radius: 10px;
   overflow: hidden;
@@ -80,6 +82,10 @@ button[aria-expanded="true"] {
 }
 .paper_card_details {
   padding: 10px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 .paper_card_title h3 {
   font-family: "Open Sans";
